feat(ui): replace JavaFX desktop with a ZK 9.6 web UI
Delete the JavaFX UI -- Launcher, DataLniFxApp, every Controller and
support helper (Tables/Cells/Dialogs/Spinners/...), the FX-specific
TaskExecutorConfig + StageManager/ThemeManager/SpringFxmlLoader, all
FXML pages, the desktop CSS and SVG icon, the jpackage profile assets
under src/packaging/ and the package-{linux,windows} scripts -- and
land a ZK 9.6 web UI in their place:

- ZK MVVM view models under ui/: MainVM (header strip),
  Projects/Graphs/Sustainability list VMs + matching FormVMs +
  DataNumberFormVM + DeleteGraphFormVM (cascade-vs-move dialog when
  a Graph has Numbers attached). RootRedirectController sends bare
  hits on / to /index.zul; Spring Security then routes anonymous
  users to /login.zul.
- ZUL pages under src/main/webapp/: index shell (borderlayout +
  tabbox + included header.zul), login (plain form posting to
  Spring Security's /login -- CSRF is off), four list pages with
  multi-select checkboxes, server-side sort by header click,
  per-row Editar/Excluir, page-size dropdown (25/50/100/200) and
  i18n labels (page.itemsPerPage), four create/edit modals, the
  delete-graph chooser.
- Spring-bean injection into VMs goes through zkplus'
  DelegatingVariableResolver + @WireVariable.
- Form widgets: ZK datebox is bridged to LocalDate via the new
  LocalDateConverter, the Month/ODS/Graph pickers use combobox with
  templated comboitems, the Sustainability form derives year from
  the publication date on save.
- Master-detail (Graphs): SelectEvent.getReference() drives the
  active row instead of the unreliable selectedItem (multi-select);
  unchecking the active graph picks another remaining row or
  collapses the detail back to the "select a graph" header.
- Brand: UEM symbol from packaging/icon.png + images/app-icon.svg is
  reused as the navbar logo (cropped viewBox in uem-symbol.svg) and
  as the login card centerpiece. Iceblue theme + Font Awesome 7 via
  webjar (linked from index.zu